# AOC2019

./: .gitignore  Cargo.toml  README.md  run_all.py
aoc-graph/: Cargo.toml
aoc-graph/src/: lib.rs
day1/: Cargo.toml  solve.ps1
day1/benches/: bench.rs
day1/src/: lib.rs  main.rs
day10/: Cargo.toml  bench.sh  solve.ps1
day10/benches/: bench.rs
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml  solve.ps1
day12/src/: lib.rs  main.rs
day13/: Cargo.toml  solve.ps1
day13/src/: lib.rs  main.rs
day14/: Cargo.toml  bench.sh
day14/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/benches/: bench.rs
day2/src/: lib.rs  main.rs
day3/: Cargo.toml  solve.ps1
day3/benches/: bench.rs
day3/src/: lib.rs  main.rs
day4/: Cargo.toml  solve.ps1
day4/benches/: bench.rs
day4/src/: lib.rs  main.rs
day5/: Cargo.toml
day5/benches/: bench.rs
day5/src/: lib.rs  main.rs
day6/: Cargo.toml  bench.sh  solve.ps1
day6/benches/: bench.rs
day6/src/: lib.rs  main.rs
day7/: Cargo.toml
day7/src/: lib.rs  main.rs
day8/: Cargo.toml  solve.ps1
day8/benches/: bench.rs
day8/src/: lib.rs  main.rs
day9/: Cargo.toml  bench.sh  perf.data  perf.data.old  stacks.folded
day9/benches/: bench.rs
day9/src/: lib.rs  main.rs
intcode-computer/: Cargo.toml
intcode-computer/src/: io_wrapper.rs  lib.rs
