[package]
name = "day7"
version = "0.1.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "day7"
path = "./src/lib.rs"

[[bin]]
name = "day7"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0.25"
intcode_computer = {path = "../intcode-computer"}
itertools = "*"
log = {version = "*" , features=["release_max_level_off"]}
env_logger = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "bench"
harness = false